# cleaningbot_navigation_sim

./: .clang-format  CMakeLists.txt  README.md  format.bash  package.xml  short.json
action/: LoadPlanJson.action
data/: arc.json  circle.json  hello.json  line.json  square.json
include/cleaningbot_navigation_sim/: occupancy_map.h  robot_planner.h  robot_planner_utils.hpp  robot_status.h  robot_vis.h
src/: main.cpp  robot_planner.cpp  robot_vis.cpp
srv/: LoadPlanJson.srv
test/: robot_planner_test.cpp  robot_planner_utils_test.cpp
test/test_vectors/: circle.json  line0.json  line45.json  line90.json  no_point.json  not_four_points_robot.json  not_two_points_gadget.json  one_point.json  two_points.json
